--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     "react-router-dom": "https://esm.sh/react-router-dom@^6.24.1",
     "recharts": "https://esm.sh/recharts@^3.1.0",
     "react-hook-form": "https://esm.sh/react-hook-form@^7.52.1",
+    "uuid": "https://esm.sh/uuid@^11.1.0",
     "mongoose": "https://esm.sh/mongoose@^8.16.5",
-    "next": "https://esm.sh/next@^15.4.4",
-    "uuid": "https://esm.sh/uuid@^11.1.0"
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.3.7"
   }
 }
 </script>
