--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
         }
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "uuid": "https://esm.sh/uuid@^11.1.0",
-    "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "recharts": "https://esm.sh/recharts@^3.1.0",
-    "vite": "https://esm.sh/vite@^7.0.6",
+    "react/": "https://esm.sh/react@^19.1.1/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.7.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0",
+    "recharts": "https://esm.sh/recharts@^3.1.0",
     "react-hook-form": "https://esm.sh/react-hook-form@^7.61.1",
     "mongoose": "https://esm.sh/mongoose@^8.16.5",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.3.7"
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.3.7",
+    "uuid": "https://esm.sh/uuid@^11.1.0",
+    "vite": "https://esm.sh/vite@^7.0.6",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0"
   }
 }
 </script>
