--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     "@vercel/node": "https://esm.sh/@vercel/node@^5.3.7",
     "uuid": "https://esm.sh/uuid@^11.1.0",
     "vite": "https://esm.sh/vite@^7.0.6",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0",
+    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.2"
   }
 }
 </script>
